--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 2.8.12)
 project(yifanlibrary)
+set (CMAKE_CXX_FLAGS "--std=gnu++11 ${CMAKE_CXX_FLAGS}")
 
 include_directories("${PROJECT_SOURCE_DIR}/src")
 include_directories("${PROJECT_SOURCE_DIR}/include")
@@ -10,11 +11,15 @@ include_directories("${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}")
 ###########
 ## Build ##
 ###########
-add_library(SINGLETON
+add_library(SINGLETON SHARED
 	src/SINGLETON.cpp 
 # 	"src/PracticalSocket.cpp" 
 # 	"src/egm.pb.cc" 
 # 	"src/TimerLinux.cpp"
+)
+
+add_library(TimerLinux SHARED
+	src/TimerLinux.cpp
 )
 
 # target_link_libraries(SINGLETON	
@@ -33,6 +38,6 @@ install(DIRECTORY include/
     )
 
 # binaries
-install(TARGETS SINGLETON
+install(TARGETS SINGLETON TimerLinux
     DESTINATION /usr/local/lib/yifanlibrary
     )
