clean up, Rename library to RobotUtilities; remove junks from include/; change namespace to 'RUT'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,9 @@
 cmake_minimum_required(VERSION 2.8.12)
-project(yifanlibrary)
+project(RobotUtilities)
 set (CMAKE_CXX_FLAGS "--std=gnu++11 ${CMAKE_CXX_FLAGS}")
 
-include_directories("${PROJECT_SOURCE_DIR}/src")
-include_directories("${PROJECT_SOURCE_DIR}/include")
-include_directories("${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}")
+include_directories(include/)
+# include_directories("${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}")
 
 include_directories(/usr/include/eigen3)
 
@@ -12,10 +11,6 @@ include_directories(/usr/include/eigen3)
 ###########
 ## Build ##
 ###########
-add_library(SINGLETON SHARED
-	src/SINGLETON.cpp
-)
-
 add_library(TimerLinux SHARED
 	src/TimerLinux.cpp
 )
@@ -23,13 +18,6 @@ add_library(TimerLinux SHARED
 add_library(Utilities SHARED
 	src/utilities.cpp
 )
-
-# target_link_libraries(SINGLETON
-#     ${Boost_FILESYSTEM_LIBRARY}
-#     ${Boost_SYSTEM_LIBRARY}
-#     ${PROTOBUF_LIBRARY}
-# )
-
 
 #############
 ## Install ##
@@ -40,6 +28,6 @@ install(DIRECTORY include/
     )
 
 # binaries
-install(TARGETS SINGLETON TimerLinux Utilities
-    DESTINATION /usr/local/lib/yifanlibrary
+install(TARGETS TimerLinux Utilities
+    DESTINATION /usr/local/lib/${PROJECT_NAME}
     )
