--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,10 +30,10 @@ target_link_libraries(test_utilities Utilities)
 # headers
 
 install(DIRECTORY include/
-    DESTINATION ${CMAKE_INSTALL_PREFIX}/include/
+    DESTINATION ${CMAKE_INSTALL_PREFIX}/include/${PROJECT_NAME}
     )
 
 # binaries
 install(TARGETS TimerLinux Utilities
-    DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/${PROJECT_NAME}
+    DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/
     )
